Fix for bug 82569, a simple null check to patch over a crash some people are seeing from talkback. r=blake, sr=jst